--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.1.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "sass-svg": "^1.2.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.43",
