--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
+		"experimentalDecorators": true,
 		"paths": {
 			"$lib": [ "src/lib" ],
 			"$lib/*": [ "src/lib/*" ]
