Serialization and neumorphic construction
Refactored the serialization code to work a little better, and re-worked the neumorphic design code to be a little more robust. Meant simplifying to box shadows which perform worse with large edge slopes on the slabs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,10 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "Launch via NPM",
+			"command": "yarn tauri dev",
+			"name": "yarn tauri dev",
 			"request": "launch",
-			"runtimeArgs": [
-				"tauri",
-				"dev"
-			],
-			"runtimeExecutable": "yarn",
-			"skipFiles": [
-				"<node_internals>/**"
-			],
-			"type": "node"
+			"type": "node-terminal"
 		}
-
 	]
 }
