--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mod-planner",
+	"name": "mod-master",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -34,5 +34,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql"
+	}
 }
