Switch to a UI library and make some functionality improvements

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"beercss": "^2.3.0",
 		"tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql"
 	}
 }
