--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	"type": "module",
 	"dependencies": {
 		"beercss": "^2.3.0",
+		"material-symbols": "^0.4.2",
 		"tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql"
 	}
 }
