--- a/package.json
+++ b/package.json
@@ -1,43 +1,30 @@
 {
-	"name": "mod-spider",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@sass-fairy/url": "^1.0.0",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-static": "^1.0.0-next.44",
-		"@sveltejs/kit": "next",
-		"@tauri-apps/api": "^1.2.0",
-		"@tauri-apps/cli": "^1.2.3",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"sass": "^1.55.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.6",
-		"svelte-preprocess-sass-alias-import": "^0.1.0",
-		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"beercss": "^2.3.0",
-		"material-symbols": "^0.4.4",
-		"tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql"
-	}
+  "name": "mod-spider",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "tauri": "tauri"
+  },
+  "dependencies": {
+    "beercss": "^3.0.8",
+    "material-symbols": "^0.4.4"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-static": "^1.0.6",
+    "@sveltejs/kit": "^1.3.10",
+    "@tauri-apps/api": "^1.2.0",
+    "@tauri-apps/cli": "^1.2.3",
+    "sass": "^1.58.1",
+    "svelte": "^3.55.1",
+    "svelte-check": "^3.0.3",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.1"
+  }
 }
