--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.4.0",
-    "jsdom": "^22.1.0"
+    "jsdom": "^22.1.0",
+    "luxon": "^3.4.2"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
@@ -24,6 +25,7 @@
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.4",
-    "vite-plugin-node-polyfills": "^0.9.0"
+    "vite-plugin-node-polyfills": "^0.9.0",
+    "@types/luxon": "^3.3.2"
   }
 }
