--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tauri-apps/cli": "^1.4.0",
     "@tsconfig/svelte": "^5.0.0",
+    "@types/luxon": "^3.3.2",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
     "svelte-preprocess": "^5.0.0",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.4",
-    "vite-plugin-node-polyfills": "^0.9.0",
-    "@types/luxon": "^3.3.2"
+    "vite-plugin-node-polyfills": "^0.9.0"
   }
 }
