--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,23 +3,33 @@
 	// for the documentation about the tasks.json format
 	"version": "2.0.0",
 	"tasks": [
-	  {
-		"label": "ui:dev",
-		"type": "shell",
-		// `dev` keeps running in the background
-		// ideally you should also configure a `problemMatcher`
-		// see https://code.visualstudio.com/docs/editor/tasks#_can-a-background-task-be-used-as-a-prelaunchtask-in-launchjson
-		"isBackground": true,
-		// change this to your `beforeDevCommand`:
-		"command": "pnpm",
-		"args": ["dev"]
-	  },
-	  {
-		"label": "ui:build",
-		"type": "shell",
-		// change this to your `beforeBuildCommand`:
-		"command": "pnpm",
-		"args": ["build"]
-	  }
+		{
+			"label": "ui:build",
+			"type": "shell",
+			"command": "pnpm",
+			"args": [
+				"build"
+			]
+		},
+		{
+			"type": "shell",
+			"label": "ui:dev",
+			"isBackground": true,
+			"command": "pnpm",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"args": [
+				"tauri",
+				"dev"
+			],
+			"problemMatcher": [],
+			"options": {
+				"env": {
+					"WEBVIEW2_ADDITIONAL_BROWSER_ARGUMENTS": "--remote-debugging-port=1422"
+				}
+			}
+		}
 	]
   }
