--- a/package.json
+++ b/package.json
@@ -12,19 +12,25 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.4.0",
+    "dexie": "4.0.1-beta.1",
     "jsdom": "^22.1.0",
     "luxon": "^3.4.2"
   },
   "devDependencies": {
+    "@iconify/svelte": "^3.1.4",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
     "@tauri-apps/cli": "^1.4.0",
     "@tsconfig/svelte": "^5.0.0",
+    "@types/jsdom": "^21.1.3",
     "@types/luxon": "^3.3.2",
+    "node-html-markdown": "^1.3.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
+    "svelte-markdown": "^0.4.0",
     "svelte-preprocess": "^5.0.0",
+    "svelvet": "^8.1.0",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.4",
