--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.4.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.4.0", features = [ "fs-write-file", "fs-read-file", "path-all", "dialog-save", "dialog-open", "http-all"] }
+tauri = { version = "1.4.0", features = [ "protocol-asset", "fs-all", "path-all", "dialog-save", "dialog-open", "http-all"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
