--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-html-markdown": "^1.3.0"
   },
   "devDependencies": {
+    "@fontsource-variable/montserrat": "^5.0.16",
     "@fontsource/mirza": "^5.0.17",
     "@fontsource/oldenburg": "^5.0.17",
     "@iconify-json/carbon": "^1.1.21",
